trying to add side images but i ran out of time before work, research and try to implement

--- a/gamesreview/templates/home.html
+++ b/gamesreview/templates/home.html
@@ -12,7 +12,7 @@
     <title>Home</title>
 </head>
 <header>
-  <nav nav class="purple">
+  <nav nav class="purple darken-3">
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Games Review</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"></i></a>
@@ -39,6 +39,9 @@
     <img src="{{url_for('static', filename='image/skyrim.png')}}" alt="" class="img img-3">
     <img src="{{url_for('static', filename='image/kartos.png')}}" alt="" class="img img-4">
 
+
+    <img id="left" src="{{url_for('static', filename='image/ml.png')}}" alt="">
+    <img src="{{url_for('static', filename='image/rdr2.png')}}" alt="">
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
