--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -5,26 +5,29 @@
   }
   
   body{
-      background-color: purple;
+      background-image :  url("https://i.postimg.cc/J0bz8c0W/retro.jpg");
+      
   }
 
   img {
-    position: absolute;
-    bottom: 12%;
-    margin-left: 5%;
+    position: fixed;
+    bottom: 16%;
+    margin-left: 10%;
     height: 70%;
-    width: 60%;
+    width: 100vh;
     align-items: center;
     opacity: 0;
     border: 1px solid #ccc;
     border-radius: 5px;
-    transition: 0.8s;
+    transition: 1s;
   }
   
   .show {
-    opacity: 1;
+    opacity: 0.8;
   }
-
+#left{
+    width: 100%;
+}
 .nav-wrapper a{
     color: black;
     font-size: 30px;
@@ -34,15 +37,5 @@
 @media screen and (max-width: 667px) {
     .nav-wrapper a{
         font-size: 15px;
-    }
-}
-#retro{
-    width: 100%;
-    height: 50%;
-}
-
-@media screen and (max-width: 667px) {
-    #retro{
-      
     }
 }
