--- a/gamesreview/templates/home.html
+++ b/gamesreview/templates/home.html
@@ -12,7 +12,7 @@
     <title>Home</title>
 </head>
 <header>
-  <nav nav class="purple darken-3">
+  <nav nav class="light-green accent-3">
     <div class="nav-wrapper">
       <a href="#!" class="brand-logo">Games Review</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"></i></a>
