--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -5,25 +5,24 @@
   }
   
   body{
-      background-image :  url("https://i.postimg.cc/BvX6zMYw/backxbp.png");
-      
+      background-image :  url("https://i.postimg.cc/vH5vMxfz/image.png");
   }
 
   img {
     position: fixed;
-    bottom: 16%;
-    margin-left: 10%;
+    bottom: 15%;
+    margin-left: 14%;
     height: 70%;
     width: 100vh;
     align-items: center;
-    opacity: 0;
+    opacity: 0.8;
     border: 1px solid;
     border-radius: 5px;
     transition: 1s;
   }
-  
+
   .show {
-    opacity: 0.7;
+    opacity: 1;
   }
 #left{
     width: 100%;
@@ -36,10 +35,21 @@
     font-size: 30px;
     font-family: 'Cookie', cursive;
     font-family: 'Righteous', cursive;
-   
 }
+.sidenav a{
+  color:#01579b;
+}
+
 @media screen and (max-width: 667px) {
     .nav-wrapper a{
         font-size: 15px;
     }
+
+    img{
+      width: 50%;
+      height: 50%;
+
+    }
 }
+
+
