--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -16,7 +16,7 @@
   <nav>
     <div class="nav-wrapper green darken-2">
       <a href="#!" class="brand-logo">Games Review</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"></i>></a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="badges.html">Games</a></li>
