--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
-   
+    {% block styles %}
+  {% endblock %}
     <title>Home</title>
 </head>
-<header>
-  {% block styles %}
-  {% endblock %}
+<body>
+  <header>
+ 
   <nav>
     <div class="nav-wrapper green darken-2">
       <a href="#!" class="brand-logo">Games Review</a>
@@ -33,12 +34,28 @@
     <li><a href="{{ url_for('register') }}">Register</a></li>
   </ul>
 </div>
-{% block content %}
-    {% endblock %}
-</header>
 
-<body>
+</header>
+<section>
+  <!-- flash messages -->
+  {% with messages = get_flashed_messages() %}
+      {% if messages %}
+          {% for message in messages %}
+              <div class="row flashes">
+                  <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
+              </div>
+          {% endfor %}
+      {% endif %}
+  {% endwith %}
+</section>
+<main class="container">
+  {% block content %}
+  {% endblock %}
+</main>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
+    {% block scripts %}
+    {% endblock %}
 </body>
 </html>
