changes to back ground images and games page with layout with text and images. images still need changing along with text

--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -5,7 +5,7 @@
   }
   
   body{
-      background-image :  url("https://i.postimg.cc/vH5vMxfz/image.png");
+      background-image :  url("https://i.postimg.cc/5y4vjWM3/gameover.jpg");
   }
 
 .nav-wrapper a{
