--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -20,42 +20,32 @@
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('index') }}">Home</a></li>
-        <li><a href="badges.html">Games</a></li>
+        <li><a href="{{ url_for('games') }}">Games</a></li>
         <li><a href="{{ url_for('login') }}">Login</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
       </ul>
  
   </nav>
 
-  <ul class="sidenav green draken-3" id="mobile-demo">
+  <ul class="sidenav green draken-2" id="mobile-demo">
     <li><a href="{{ url_for('index') }}">Home</a></li>
-    <li><a href="badges.html">Games</a></li>
-    <li><a href="collapsible.html">Login</a></li>
+    <li><a href="{{ url_for('games') }}">Games</a></li>
+    <li><a href="{{ url_for('login') }}">Login</a></li>
     <li><a href="{{ url_for('register') }}">Register</a></li>
   </ul>
 </div>
 
 </header>
-<section>
-  <!-- flash messages -->
-  {% with messages = get_flashed_messages() %}
-      {% if messages %}
-          {% for message in messages %}
-              <div class="row flashes">
-                  <h4 class="light-blue lighten-4 center-align">{{ message }}</h4>
-              </div>
-          {% endfor %}
-      {% endif %}
-  {% endwith %}
-</section>
+
 <main class="container">
-  {% block content %}
-  {% endblock %}
+    {% block content %}
+    {% endblock %}
 </main>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
-    {% block scripts %}
+    {% block script %}
     {% endblock %}
 </body>
 </html>
