--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -7,7 +7,11 @@
   body{
       background-image :  url("https://i.postimg.cc/5y4vjWM3/gameover.jpg");
   }
-
+/* banner css*/
+.banner img{
+  width: 100%;
+  height: 50%;
+}
 .nav-wrapper a{
     color: #01579b;
     font-size: 30px;
