--- a/gamesreview/templates/games.html
+++ b/gamesreview/templates/games.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col s12 m6 l3">
+    <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -12,7 +12,40 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l3">
+      <div class="col s12 m6 l4">
+        <div class="card green draken-2">
+          <div class="card-image">
+            <img src="{{url_for('static', filename='image/codw.png')}}">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content blue-text text-darken-4">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l4">
+        <div class="card green draken-2">
+          <div class="card-image">
+            <img src="{{url_for('static', filename='image/sky.png')}}">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content blue-text text-darken-4">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l4">
+        <div class="card green draken-2">
+          <div class="card-image">
+            <img src="{{url_for('static', filename='image/gta.png')}}">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content blue-text text-darken-4">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -23,7 +56,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l3">
+      <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -34,7 +67,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l3">
+      <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -45,40 +78,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l3">
-        <div class="card green draken-2">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m6 l3">
-        <div class="card green draken-2">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m6 l3">
-        <div class="card green draken-2">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m6 l3">
+      <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -133,11 +133,6 @@
           </div>
         </div>
       </div>
-      
-      
-     
-
-
 </div>
 
 
