no chnages to code, image keep throwing out games page

--- a/gamesreview/templates/games.html
+++ b/gamesreview/templates/games.html
@@ -25,7 +25,7 @@
       </div>
       <div class="col s12 m6 l4">
         <div class="card green draken-2">
-          <div class="card-image">
+          <div class="card-image small">
             <img src="{{url_for('static', filename='image/sky.png')}}">
             <span class="card-title"></span>
           </div>
@@ -48,7 +48,7 @@
       <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/sp.png')}}">
             <span class="card-title"></span>
           </div>
           <div class="card-content blue-text text-darken-4">
@@ -59,7 +59,7 @@
       <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/kartos.png')}}">
             <span class="card-title"></span>
           </div>
           <div class="card-content blue-text text-darken-4">
@@ -70,7 +70,7 @@
       <div class="col s12 m6 l4">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/.png')}}">
             <span class="card-title"></span>
           </div>
           <div class="card-content blue-text text-darken-4">
