--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -8,10 +8,7 @@
       background-image :  url("https://i.postimg.cc/5y4vjWM3/gameover.jpg");
   }
 /* banner css*/
-.banner img{
-  width: 100%;
-  height: 50%;
-}
+
 .nav-wrapper a{
     color: #01579b;
     font-size: 30px;
@@ -90,7 +87,10 @@
   }
 }
 
-
+/* card image sizes */
+.row img{
+  width: 100%;
+}
 /* row text size */
 
 .row p{
