text slider with css and java added to index.html. image issues sorted on games.html

--- a/gamesreview/templates/games.html
+++ b/gamesreview/templates/games.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-    <div class="col s12 m6 l4">
+  <div class="height">
+    <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -12,7 +13,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/codw.png')}}">
@@ -23,7 +24,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image small">
             <img src="{{url_for('static', filename='image/sky.png')}}">
@@ -34,7 +35,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/gta.png')}}">
@@ -45,7 +46,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/sp.png')}}">
@@ -56,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/kartos.png')}}">
@@ -67,10 +68,10 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/.png')}}">
+            <img src="{{url_for('static', filename='image/obliv.png')}}">
             <span class="card-title"></span>
           </div>
           <div class="card-content blue-text text-darken-4">
@@ -78,10 +79,10 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/mgp.png')}}">
             <span class="card-title"></span>
           </div>
           <div class="card-content blue-text text-darken-4">
@@ -89,29 +90,18 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/witcher3.png')}}">
             <span class="card-title"></span>
           </div>
           <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+            <p>The Witcher 3 : Wild Hunt is an action role-playing game with a third-person perspective. Players control Geralt of Rivia , a monster slayer known as the white wolf.</p>
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
-        <div class="card green draken-2">
-          <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
-            <span class="card-title"></span>
-          </div>
-          <div class="card-content blue-text text-darken-4">
-            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -122,7 +112,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+      <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
@@ -133,6 +123,18 @@
           </div>
         </div>
       </div>
+      <div class="col s12 m6 l5">
+        <div class="card green draken-2">
+          <div class="card-image">
+            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <span class="card-title"></span>
+          </div>
+          <div class="card-content blue-text text-darken-4">
+            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 
 
