--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -6,8 +6,88 @@
   
   body{
       background-image :  url("https://i.postimg.cc/5y4vjWM3/gameover.jpg");
+      
   }
-/* banner css*/
+
+/* Slideshow container */
+.slideshow-container {
+  position: relative;
+  background: #f1f1f1f1;
+  margin-top: 10%;
+}
+
+/* Slides */
+.mySlides {
+  display: none;
+  padding: 80px;
+  text-align: center;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -30px;
+  padding: 16px;
+  color: #888;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  position: absolute;
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+}
+
+/* The dot/bullet/indicator container */
+.dot-container {
+  text-align: center;
+  padding: 20px;
+  background: #ddd;
+  width: auto;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+/* Add a background color to the active dot/circle */
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Add an italic font style to all quotes */
+q {
+  font-style: italic;
+}
+
+/* Add a blue color to the author */
+.author {
+  color: cornflowerblue;
+}
+
 
 .nav-wrapper a{
     color: #01579b;
@@ -53,7 +133,7 @@
   clip-path: circle(0% at 0 50%);
 }
 
-.img-slider .slide.active{
+.img-slider .slide.active {
   clip-path: circle(150% at 0 50%);
   transition: 5s;
 }
@@ -88,8 +168,8 @@
 }
 
 /* card image sizes */
-.row img{
-  width: 100%;
+.height, .card-image{
+  height: 30vh;
 }
 /* row text size */
 
