--- a/gamesreview/templates/index.html
+++ b/gamesreview/templates/index.html
@@ -1,8 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="img-slider">
+<div class="slideshow-container">
+
+  <div class="mySlides">
+    <q>I love you the more in that I believe you had liked me for my own sake and for nothing else</q>
+    <p class="author">- John Keats</p>
+  </div>
+
+  <div class="mySlides">
+    <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
+    <p class="author">- Ernest Hemingway</p>
+  </div>
+
+  <div class="mySlides">
+    <q>I have not failed. I've just found 10,000 ways that won't work.</q>
+    <p class="author">- Thomas A. Edison</p>
+  </div>
+
+  <a class="prev" onclick="plusSlides(-1)">❮</a>
+  <a class="next" onclick="plusSlides(1)">❯</a>
+
+</div>
+
+<div class="dot-container">
+  <span class="dot" onclick="currentSlide1(1)"></span>
+  <span class="dot" onclick="currentSlide1(2)"></span>
+  <span class="dot" onclick="currentSlide1(3)"></span>
+   </div>
+</div>
+  <div class="img-slider">
     <div class="slide active">
-      <img src="{{url_for('static', filename='image/rdr2.png')}}" alt=""> alt="1">
+      <img src="{{url_for('static', filename='image/rdr2.png')}}" alt="">
     </div>
     <div class="slide">
       <img src="{{url_for('static', filename='image/codw.png')}}" alt="2">
@@ -13,6 +41,7 @@
     <div class="slide">
       <img src="{{url_for('static', filename='image/kartos.png')}}" alt="4">
       </div>
+  
 
 
 {% endblock %}
