changes to background making transparent and text chnage to white

--- a/gamesreview/templates/games.html
+++ b/gamesreview/templates/games.html
@@ -3,12 +3,12 @@
 <div class="row">
   <div class="height">
     <div class="col s12 m6 l5">
-        <div class="card green draken-2">
+        <div class="card green transparent">
           <div class="card-image">
             <img src="{{url_for('static', filename='image/red2.png')}}">
             <span class="card-title"></span>
           </div>
-          <div class="card-content blue-text text-darken-4">
+          <div class="card-content white-text text-darken-4">
             <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
           </div>
         </div>
