--- a/gamesreview/templates/games.html
+++ b/gamesreview/templates/games.html
@@ -5,7 +5,7 @@
     <div class="col s12 m6 l5">
         <div class="card green transparent">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/red2.png')}}">
+            <img src="{{url_for('static', filename='image/red2.png')}}">changes to 
             <span class="card-title"></span>
           </div>
           <div class="card-content white-text text-darken-4">
