--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
-    {% block styles %}
+   
  
     <title>Home</title>
 </head>
@@ -23,6 +23,8 @@
         <li><a href="{{ url_for('games') }}">Games</a></li>
         <li><a href="{{ url_for('login') }}">Login</a></li>
         <li><a href="{{ url_for('register') }}">Register</a></li>
+        <li><a href="{{ url_for('titles') }}">Titles</a></li>
+        <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
       </ul>
  
   </nav>
@@ -36,19 +38,39 @@
 </div>
 
 </header>
-{% endblock %}
+
 <main class="container">
     {% block content %}
     {% endblock %}
 </main>
-
-<footer>
-    <div class="waves">
-      <div class="wave" id="wave1">
-        <p>All image used in the is project are for educational purposes only</p>
-    
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Footer Content</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Links</h5>
+        <ul>
+          <li><a class="white-text text-lighten-3" href="#!">Link 1</a></li>
+          <li><a class="white-text text-lighten-3" href="#!">Link 2</a></li>
+          <li><a class="white-text text-lighten-3" href="#!">Link 3</a></li>
+          <li><a class="white-text text-lighten-3" href="#!">Link 4</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © 2014 Copyright Text
+    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    </div>
   </div>
 </footer>
+    
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
