--- a/gamesreview/templates/publisher.html
+++ b/gamesreview/templates/publisher.html
@@ -4,8 +4,8 @@
 
 <div class="row">
     <div class="s1 m2">
-      <div class="card  green darken-2">
-        <div class="card-content blue-text text-darken-4 center-align">
+      <div class="card transparent">
+        <div class="card-content white-text text-darken-4 center-align">
           <span class="card-title">Publishers</span>
         </div>
       </div>
@@ -13,8 +13,8 @@
   </div>
   <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_publisher') }}" class="btn-large light-blue darken-2">
-            Add Category <i class="fas fa-plus-square right"></i>
+        <a href="{{ url_for('add_publisher') }}" class="btn-large green darken-2">
+            Add Publishers <i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
