--- a/gamesreview/static/css/style.css
+++ b/gamesreview/static/css/style.css
@@ -193,3 +193,14 @@ body {
   font-size: 20px;
   
 }
+
+.page-footer{
+  height: 100%;
+  padding: 1%;
+  position: sticky;
+}
+
+/* Publisher and Add publisher css */
+#publisher_name{
+  color: white;
+}
