--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cookie&family=Righteous&display=swap">
+    <script src="https://kit.fontawesome.com/8f8d6e0652.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css">
    
@@ -43,30 +44,17 @@
     {% block content %}
     {% endblock %}
 </main>
-<footer class="page-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-      </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
-        <ul>
-          <li><a class="white-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="white-text text-lighten-3" href="#!">Link 2</a></li>
-          <li><a class="white-text text-lighten-3" href="#!">Link 3</a></li>
-          <li><a class="white-text text-lighten-3" href="#!">Link 4</a></li>
-        </ul>
-      </div>
+<footer>
+  <footer class="page-footer green darken-2">
+    <div class="footer-copyright">
+        <div class="container">
+           All images used in this site are for educational purposes only.
+            <a class="blue-text text-darken-4 right" href="https://codeinstitute.net" target="_blank">&copy; Code Institute</a>
+        </div>
     </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container">
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-    </div>
-  </div>
+</footer>
+ 
+  <
 </footer>
     
 
