chnages to publisher page with images instead of plain card text. crud funcation add to the database. Tittles page still needs some work on the backend

--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -27,16 +27,19 @@
         <li><a href="{{ url_for('titles') }}">Titles</a></li>
         <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
       </ul>
- 
-  </nav>
+  
 
   <ul class="sidenav green draken-2" id="mobile-demo">
     <li><a href="{{ url_for('index') }}">Home</a></li>
     <li><a href="{{ url_for('games') }}">Games</a></li>
     <li><a href="{{ url_for('login') }}">Login</a></li>
     <li><a href="{{ url_for('register') }}">Register</a></li>
-  </ul>
-</div>
+    <li><a href="{{ url_for('titles') }}">Titles</a></li>
+    <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
+    </ul>
+   </nav>
+
+  </div>
 
 </header>
 
@@ -54,7 +57,7 @@
     </div>
 </footer>
  
-  <
+  
 </footer>
     
 
