--- a/gamesreview/templates/games.html
+++ b/gamesreview/templates/games.html
@@ -16,8 +16,9 @@
       <div class="col s12 m6 l5">
         <div class="card green draken-2">
           <div class="card-image">
-            <img src="{{url_for('static', filename='image/codw.png')}}">
+            <img src="{{url_for('static', filename='image/codw.png')}}" alt="">
             <span class="card-title"></span>
+
           </div>
           <div class="card-content blue-text text-darken-4">
             <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
