--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -2,7 +2,13 @@
 {% block content %}
  
 
-<h3> Titles  </h3>
-
+<h3> Titles </h3>
+<div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_titles') }}" class="btn-large green darken-2">
+            Add Titles <i class="fas fa-plus-square right"></i>
+        </a>
+    </div>
+</div>
 
 {% endblock %}
