--- a/gamesreview/templates/add_publisher.html
+++ b/gamesreview/templates/add_publisher.html
@@ -19,7 +19,7 @@
 </div>
 <div class="row card-panel green darken-2">
     <form class="col s12" method="POST" action="{{ url_for('add_publisher') }}">
-        <!-- category name -->
+        <!-- Publisher name -->
         <div class="row">
             <div class="input-field col s12 green darken-2">
                 <i class="fas fa-folder-open prefix white-text"></i>
