--- a/gamesreview/templates/add_game.html
+++ b/gamesreview/templates/add_game.html
@@ -12,33 +12,33 @@
   </div>
   <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_titles') }}" class="btn-large green darken-2">
+        <a href="{{ url_for('add_game') }}" class="btn-large green darken-2">
             Add titles <i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
 <div class="row card-panel green darken-2">
-    <form class="col s12" method="POST" action="{{ url_for('add_titles') }}">
+    <form class="col s12" method="POST" action="">
         <!-- titles name -->
         <div class="row">
             <div class="input-field col s12 green darken-2">
                 <i class="fas fa-folder-open prefix white-text"></i>
                 <textarea  id="title_name" name="title_name" minlength="4" maxlength="50" 
                 type="text" class="materialize-textare validate" required></textarea>
-                <label for="title_name">Title Name</label>
+                <label for="game_name"></label>
             </div>
         </div>
         <!-- Publisher id  -->
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-folder-open prefix light-blue-text text-darken-4"></i>
-                <select id="category_id" name="category_id" class="validate" required>
+                <select id="publisher_id" name="publisher_id" class="validate" required>
                     <option value="" disabled selected>Choose Publisher</option>
                     {% for publisher in publisher %}
-                        <option value="{{ publisher.id }}">{{ publisher.publisher_name }}</option>
+                        <option value="{{ publisher_id}}">{{ publisher.publisher_id }}</option>
                     {% endfor %}
                 </select>
-                <label for="category_id">publisher</label>
+                <label for="publisher_id">publisher</label>
             </div>
         </div>
         <!-- submit button -->
