--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -22,8 +22,8 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('games') }}">Games</a></li>
-        <li><a href="{{ url_for('login') }}">Login</a></li>
-        <li><a href="{{ url_for('register') }}">Register</a></li>
+        <li><a href="">Login</a></li>
+        <li><a href="">Register</a></li>
         <li><a href="{{ url_for('titles') }}">Titles</a></li>
         <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
       </ul>
@@ -32,8 +32,8 @@
   <ul class="sidenav green draken-2" id="mobile-demo">
     <li><a href="{{ url_for('index') }}">Home</a></li>
     <li><a href="{{ url_for('games') }}">Games</a></li>
-    <li><a href="{{ url_for('login') }}">Login</a></li>
-    <li><a href="{{ url_for('register') }}">Register</a></li>
+    <li><a href="">Login</a></li>
+    <li><a href="">Register</a></li>
     <li><a href="{{ url_for('titles') }}">Titles</a></li>
     <li><a href="{{ url_for('publisher') }}">Publishers</a></li>
     </ul>
