--- a/gamesreview/templates/login.html
+++ b/gamesreview/templates/login.html
@@ -4,7 +4,7 @@
 <h3 class="center-align">Log In</h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="">
             <div class="card-panel green darken-2">
                 <!-- username -->
                 <div class="row">
@@ -34,8 +34,8 @@
         </form>
     </div>
     <div class="row">
-        <div class="col s12">>
-                <a href="{{ url_for('register') }}" class="blue-text text-darken-4"> Register here</a>
+        <div class="col s12 m6 l3">
+                <a href="" class="blue-text text-darken-4 center-align">Register here</a>
         </div>
     </div>
     
