--- a/gamesreview/templates/publisher.html
+++ b/gamesreview/templates/publisher.html
@@ -21,13 +21,13 @@
 <div class="row">
   <div></div>
   {% for publisher in publisher  %}
-  <div class="col s12 m5 l3 center-align">
+  <div class="col s12 m5 l3">
     <div class="card green darken-2 center-align">
       <div class="card-image s12 m6 13 center-align">
         <img src="{{url_for('static', filename='image/games.png')}}">
-        <span class="card-title">{{ publisher.publisher_name }}</span>
+        <span class="card-title s12 m5 13">{{ publisher.publisher_name }}</span>
       </div>
-      <div class="card-content white-text center-align">
+      <div class="card-content white-text">
       </div>
       <div class="card-action">
         <a href="{{ url_for('edit_publisher', publisher_id=publisher.id) }}" class="btn black">Edit</a>
