--- a/gamesreview/templates/register.html
+++ b/gamesreview/templates/register.html
@@ -3,7 +3,7 @@
 <h3 class="center-align"></h3>
 
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('register') }}">
+        <form class="col s12 m8 offset-m2" method="POST" action="">
             <div class="card-panel green darken-2">
                 <!-- username -->
                 <div class="row">
