--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
  
+<div class="row">
+    <div class="s1 m2">
+      <div class="card transparent">
+        <div class="card-content white-text text-darken-4 center-align">
+          <span class="card-title">Games</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<h3> Titles </h3>
 <div class="row">
     <div class="col s12 center-align">
-        <a href="{{ url_for('add_titles') }}" class="btn-large green darken-2">
-            Add Titles <i class="fas fa-plus-square right"></i>
+        <a href="{{ url_for('add_game') }}" class="btn-large green darken-2">
+            Add Games <i class="fas fa-plus-square right"></i>
         </a>
     </div>
 </div>
