--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -30,6 +30,7 @@
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
         <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn green accent-4">Edit</a>
+        <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn red" >Delete</a>
     </div>
   </li>
  {% endfor %}
