--- a/gamesreview/templates/publisher.html
+++ b/gamesreview/templates/publisher.html
@@ -28,10 +28,21 @@
         <span class="card-title s12 m5 13">{{ publisher.publisher_name }}</span>
       </div>
       <div class="card-content white-text">
+        <p>Publishers Name</p>
       </div>
       <div class="card-action">
         <a href="{{ url_for('edit_publisher', publisher_id=publisher.id) }}" class="btn black">Edit</a>
-        <a href="{{ url_for('delete_publisher', publisher_id=publisher.id) }}" class="btn red" >Delete</a>
+        <a href="#modal-{{ publisher.id }}" class="btn red modal-trigger">Delete</a>
+        <!-- Modal warning messages  -->
+        <div id="modal-{{ publisher.id }}" class="modal">
+          <div class="modal-content col s12 m5 l3">
+            <h4>>Are you sure you want to delete this Publisher?</h4>
+            <p>This action cannot be undone</p>          
+          </div>
+          <div class="modal-footer">
+            <a href="{{ url_for('delete_publisher', publisher_id=publisher.id) }}" class="btn red">Delete</a>
+          </div>
+        </div>
        </div>
      </div>
    </div>
