--- a/gamesreview/templates/publisher.html
+++ b/gamesreview/templates/publisher.html
@@ -21,7 +21,7 @@
 <div class="row">
   <div></div>
   {% for publisher in publisher  %}
-  <div class="col s12 m5 l3">
+  <div class="col s12 m5 l3 transparent">
     <div class="card green darken-2 center-align">
       <div class="card-image s12 m6 13 center-align">
         <img src="{{url_for('static', filename='image/games.png')}}">
@@ -35,12 +35,12 @@
         <a href="#modal-{{ publisher.id }}" class="btn red modal-trigger">Delete</a>
         <!-- Modal warning messages  -->
         <div id="modal-{{ publisher.id }}" class="modal">
-          <div class="modal-content col s12 m5 l3">
-            <h4>>Are you sure you want to delete this Publisher?</h4>
+          <div class="modal-content green darken-2 white-text">
+            <h4>Are you sure you want to delete this Publisher?</h4>
             <p>This action cannot be undone</p>          
           </div>
-          <div class="modal-footer">
-            <a href="{{ url_for('delete_publisher', publisher_id=publisher.id) }}" class="btn red">Delete</a>
+          <div class="modal-footer green darken-2">
+            <a href="{{ url_for('delete_publisher', publisher_id=publisher.id) }}" class="btn-large red col m3 ">Delete</a>
           </div>
         </div>
        </div>
