--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -11,7 +11,7 @@
     </div>
   </div>
 
-<div class="row">
+<div class="row col s12 m3 l6">
     <div class="col s12 center-align">
         <a href="{{ url_for('add_game') }}" class="btn-large green darken-2">
             Add Games <i class="fas fa-plus-square right"></i>
@@ -29,13 +29,23 @@
     </div>
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
+      <div>
         <a href="{{ url_for('edit_game', game_id=game.id) }}" class="btn green accent-4">Edit</a>
-        <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn red" >Delete</a>
+        <a href="#modal-{{ game.id }}" class="btn red modal-trigger col m4">Delete</a>
+        <!-- Modal -->
+        <div id="modal-{{ game.id }}" class="modal m4">
+        <div class="modal-content col m3 green darken-2 white-text">
+          <h4>Are you sure you want to delete this Publisher?</h4>
+          <p>This action cannot be undone</p>  
+        </div>
+        <div class="modal-footer green darken-2">
+          <a href="{{ url_for('delete_game', game_id=game.id) }}" class="btn-large red">Delete</a>
+        </div>
+      </div>
     </div>
+  </div> 
   </li>
  {% endfor %}
  {% endfor %}
-
 </ul>
-
 {% endblock %}
