--- a/gamesreview/templates/base.html
+++ b/gamesreview/templates/base.html
@@ -22,7 +22,7 @@
       <ul class="right hide-on-med-and-down">
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('games') }}">Games</a></li>
-        <li><a href="{{ url_for('reviews') }}">Games</a></li>
+        <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
         <li><a href="">Login</a></li>
         <li><a href="">Register</a></li>
         <li><a href="{{ url_for('titles') }}">Titles</a></li>
@@ -33,6 +33,7 @@
   <ul class="sidenav green draken-2" id="mobile-demo">
     <li><a href="{{ url_for('index') }}">Home</a></li>
     <li><a href="{{ url_for('games') }}">Games</a></li>
+    <li><a href="{{ url_for('reviews') }}">Reveiws</a></li>
     <li><a href="">Login</a></li>
     <li><a href="">Register</a></li>
     <li><a href="{{ url_for('titles') }}">Titles</a></li>
