--- a/gamesreview/templates/reviews.html
+++ b/gamesreview/templates/reviews.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    {% reviews in reviews %}
-       {{ reviews.game_genre }}<br>
-       {{ reviews.game_rating }}<br>
-       {{ reviews.game_review }}<br>
+{% extends "base.html" %}
+{% block content %}
+    {% reviews in review %}
+       {{ review.game_genre }}<br>
+       {{ review.game_rating }}<br>
+       {{ review.game_review }}<br>
     {% endfor %}
 
-</body>
-</html>
+        
+    {% endblock %}
