--- a/gamesreview/templates/titles.html
+++ b/gamesreview/templates/titles.html
@@ -19,13 +19,12 @@
     </div>
 </div>
 <ul class="collapsible -text">
-  {%  for pub in publisher %}
+  {%  for publisher in publisher %}
   {% for game in game %}
   <li>
     <div class="collapsible-header green white-text">
       <i class="fa-solid fa-gamepad-modern"></i>
-      <strong>{{ pub.publisher_name }}</strong>
-      
+      <strong>{{ publisher.publisher_name }}</strong>
     </div>
     <div class="collapsible-body white green-text">
       <strong>{{ game.game_name }}</strong>
@@ -43,7 +42,7 @@
         </div>
       </div>
     </div>
-  </div> 
+   </div>  
   </li>
  {% endfor %}
  {% endfor %}
